# psolqr_local_planner

./: CMakeLists.txt  README.md  package.xml  psolqr_planner_plugin.xml
config/: psolqr_planner_params.yaml
include/: lqr_controller.h  pso_optimizer.h  pso_trajectory.h  psolqr_planner.h
src/: lqr_controller.cpp  pso_optimizer.cpp  pso_trajectory.cpp  psolqr_planner.cpp
